# CodeNovel

./: .gitignore  LICENSE  README.md  README_EN.md  codenovel.bat  codex_log.txt  demo_novel.txt  pyproject.toml
codenovel/: __init__.py  __main__.py  app.py  cli.py  logparser.py  progress.py  reader.py  simulator.py  ui_app.py
